feat: Create ios project
Create xcode project for ios client.
Make ios app functional.
